--- a/app/src/main/res/layout/fg_movie.xml
+++ b/app/src/main/res/layout/fg_movie.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:text="fragment_movie"/>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_movie"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_movie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="top"
+            android:textSize="20sp" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
