--- a/app/src/main/res/layout/fg_news_list.xml
+++ b/app/src/main/res/layout/fg_news_list.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_news"
+        android:id="@+id/tv_news_list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="top"
-        android:textSize="100dp"/>
+        android:layout_height="wrap_content" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_news"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/rv_news"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
